[package]
name = "rust_mongo_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
bson = "2.0"
mongodb = { version = "2.0", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
jsonwebtoken = "8.1"
dotenv = "0.15"
